# GameGather

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SteamWebCPP/SteamWebCPP/: main.cpp
SteamWebCPP/SteamWebCPP.xcodeproj/: project.pbxproj
SteamWebCPP/SteamWebCPP.xcodeproj/project.xcworkspace/xcuserdata/lucacostanzaOld.xcuserdatad/: UserInterfaceState.xcuserstate
SteamWebCPP/SteamWebCPP.xcodeproj/xcuserdata/lucacostanzaOld.xcuserdatad/xcschemes/: xcschememanagement.plist
SteamWebCpp.xcodeproj/: project.pbxproj
SteamWebCpp.xcodeproj/project.xcworkspace/xcuserdata/lucacostanzaOld.xcuserdatad/: UserInterfaceState.xcuserstate
SteamWebCpp.xcodeproj/xcuserdata/lucacostanzaOld.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/GameGatherLib/: CMakeLists.txt
lib/GameGatherLib/include/: SteamWeb.hpp
lib/GameGatherLib/src/: SteamWeb.cpp
src/: main.cpp
